--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </article>
     </main>
     <footer>
-      <p class="red">Меня зовут Василий. Я преподаю в
+      <p class="red">Меня зовут Ваня. Я преподаю в
         компьютерной академии TOP.</p>
       <P><img src="images/samsung.jpg" align=middle height="500" weight="500"></P>
     </footer>
